hphp/hack/test/typecheck/reactive/parse_missing_reactivity1.php.exp
File "parse_missing_reactivity1.php", line 6, characters 3-30:
`__OnlyRxIfImpl` and `__AtMostRxAsArgs` annotations cannot be used without `__Pure`, `__Rx`, `__RxShallow`, or `__RxLocal`. (Parsing[1002])
